# cocohrip-marek-private

install/: local_setup.sh  setup.sh
install/checkers_game/lib/checkers_game/: checkers_node
install/checkers_game/share/checkers_game/: package.bash  package.dsv  package.sh  package.xml  package.zsh
install/checkers_game_tutorial/lib/checkers_game_tutorial/: checkers_node
install/checkers_game_tutorial/share/checkers_game_tutorial/: package.bash  package.dsv  package.sh  package.zsh
install/checkers_msgs/share/checkers_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.sh  package.xml  package.zsh
install/cocohrip_control/share/cocohrip_control/: package.bash  package.dsv  package.sh  package.zsh
install/cocohrip_description/share/cocohrip_description/: package.bash  package.dsv  package.sh  package.zsh
install/cocohrip_moveit_config/share/cocohrip_moveit_config/: package.bash  package.dsv  package.sh  package.zsh
install/cocohrip_moveit_control/lib/cocohrip_moveit_control/: key_input_publisher
install/cocohrip_moveit_control/share/cocohrip_moveit_control/: local_setup.sh  package.bash  package.dsv  package.sh  package.zsh
install/demo_node/share/demo_node/: package.dsv  package.sh
install/gripper_srv/share/gripper_srv/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.sh  package.xml  package.zsh
install/leap_gesture_interface/share/leap_gesture_interface/: package.bash  package.zsh
install/robot_control/include/robot_control/: RobotPoseUtility.hpp  TestMovePublisher.hpp
install/robot_control/lib/robot_control/: test_move_publisher
install/robot_control/share/robot_control/: package.sh
install/robot_control_amavet/lib/robot_control_amavet/: move_ur5e_node
install/robot_control_amavet/share/robot_control_amavet/: package.bash  package.dsv  package.sh  package.zsh
install/robotiq_hande_ros2_driver/lib/robotiq_hande_ros2_driver/: gripper_node  test
install/robotiq_hande_ros2_driver/share/robotiq_hande_ros2_driver/: package.bash  package.dsv  package.sh  package.zsh
install/ur/share/ur/: local_setup.sh  package.dsv  package.sh
install/ur_calibration/share/ur_calibration/: local_setup.sh  package.dsv  package.sh
install/ur_client_library/share/ur_client_library/: package.dsv  package.sh
install/ur_controllers/share/ur_controllers/: local_setup.sh  package.dsv  package.sh
install/ur_dashboard_msgs/share/ur_dashboard_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.sh  package.xml
install/ur_description/share/ur_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/ur_moveit_config/share/ur_moveit_config/: local_setup.sh  package.dsv  package.sh
install/ur_robot_driver/share/ur_robot_driver/: package.dsv  package.sh
log/: latest_build
src/: README.md  run_amavet_control.txt  runing_seq.txt
src/Universal_Robots_ROS2_Description/urdf/: ur.urdf.xacro
src/Universal_Robots_ROS2_Driver/ur_robot_driver/src/: hardware_interface.cpp
src/checkers_game/: calibration_camera.py  params_set.py  setup.py
src/checkers_game/checkers_game/: checkers_node.py  constants.py  desktop_game.py
src/checkers_game/checkers_game/camera/: board_detection.py  board_detection_1.py  calibration_parameters_ncr_2.npz  calibration_parameters_ncr_3.npz  combo.py  evaluate_corner_accuracy.py  evaluate_old_board_better_success.py  grid_corner_detector.py  ground_truth_corners.json  mark_ground_truth_corners.py  offline_compare_old_current.py  offline_compare_old_current_all_videos.py  offline_grid_detect.py  offline_grid_detect_all_videos.py  old_board_better.py  old_board_legacy.py  old_boarddetection.py  oldboard_detection.py
src/checkers_game/checkers_game/checkers/: board.py  game.py  piece.py
src/checkers_game/checkers_game/minimax/: algorithm.py  alphazero_mcts.py  alphazero_model.py  eval_vs_minimax.py  plot_tournament.py  rl_algorithm.py  rl_model.py  tournament.py  train_alphazero.py  train_mixture.py  training.py
src/checkers_game/checkers_game/model/: rl_mixture_20260227_130308_log.csv  rl_mixture_20260227_130409.pth  rl_mixture_20260227_130409_log.csv  rl_mixture_20260227_130439.pth  rl_mixture_20260227_130439_log.csv  rl_model.pth  rl_model_20260225_120931.pth
src/checkers_game/launch/: checkers_game_launch.launch.py
src/checkers_game_tutorial/checkers_game_tutorial/: checkers_node.py
src/checkers_game_tutorial/checkers_game_tutorial/checkers/: board.py  game.py
src/checkers_game_tutorial/checkers_game_tutorial/minimax/: algorithm.py
src/checkers_msgs/msg/: RobotMove.msg
src/cocohrip_moveit_control/: CMakeLists.txt
src/cocohrip_moveit_control/src/: key_input_publisher.cpp  scenarios_node.cpp  ur_position_control.cpp
src/cocohrip_moveit_control/srdf/: ur.srdf.xacro
src/demo_node/: CMakeLists.txt  package.xml
src/demo_node/src/: SimplePoseReader.cpp
src/demo_node/urdf/: ur.urdf.xacro
src/leap_gesture_interface/: CMakeLists.txt  package.xml
src/leap_gesture_interface/launch/: gesture_system.launch.py
src/leap_gesture_interface/msg/: GestureEvent.msg  GesturePair.msg  LeapFinger.msg  LeapFrame.msg  LeapHand.msg  LeapPalm.msg  RecognizedGesture.msg
src/leap_gesture_interface/src/: gesture_interface_node.cpp  leap_hand_publisher_node.cpp  leap_interface_example.cpp  pointing_intersection_publisher_node.cpp
src/leap_gesture_interface/srv/: IntersectDisk.srv  IntersectFiniteCylinder.srv  IntersectInfiniteCylinder.srv
src/robot_control/: CMakeLists.txt
src/robot_control/include/robot_control/: RobotControlNode.hpp
src/robot_control/src/: RobotControlMain.cpp  RobotControlNode.cpp  RobotPoseUtility.cpp  TestDirectMove.cpp  TestMovePublisher.cpp  TestMovePublisherMain.cpp  TestRobotPoseUtility.cpp  TestRobotPoseUtilityComprehensive.cpp
src/robot_control_amavet/: QUICKSTART.md  README.md  package.xml  setup.cfg  setup.py
src/robot_control_amavet/robot_control_amavet/: move_ur5e_node.py
(+671 files in other folders)
